--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 
       <ul class="experten-bullets">
         <li>🏆 <strong>Mehr als 10 Jahre kombinierte Beratungsexpertise</strong></li>
-        <li>✅ <strong>Über 1.000 erfolgreich betreute Lohnkräfte</strong></li>
+        <li>✅ <strong>Über 1.000 erfolgreich betreute Lehrkräfte</strong></li>
         <li>🤝 Zertifiziertes Know-how in steueroptimierter Strukturberatung</li>
         <li>💡 Persönliches Finanzcockpit für volle Kontrolle & Transparenz</li>
         <li>🔍 Wir kombinieren steuerliche Vorteile mit sinnvoller Vorsorge</li>
