--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <section class="hero">
     <div class="content-wrapper">
       <p class="pre-headline" data-content="hero-preheadline">
-  Speziell für Lohnkräfte & angespannte Budgets
+  Speziell für Lehrkräfte & angespannte Budgets
 </p>
       <div class="custom-line"></div>
       <h1 class="main-headline" data-content="hero-headline">
