--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 <section class="problem-section">
   <div class="problem-wrapper">
     
-    <p class="headlineproblem-xl">Probleme, die Lohnkräfte täglich kennen</p>
+    <p class="headlineproblem-xl">Probleme, die Lehrkräfte täglich kennen</p>
     
     <div class="problem-cards">
       <div class="card">
@@ -226,7 +226,7 @@
       <div class="linieexperte"></div>
 
       <p class="experten-fliesstext">
-        Wir helfen Lohnempfänger:innen dabei, ihre Vorsorge verständlich, flexibel und mit staatlicher Unterstützung aufzubauen – digital, persönlich und planbar abgesichert.
+        Wir helfen Lehrkräften dabei, ihre Vorsorge verständlich, flexibel und mit staatlicher Unterstützung aufzubauen – digital, persönlich und planbar abgesichert.
       </p>
 
       <ul class="experten-bullets">
@@ -354,7 +354,7 @@
       <p class="faq-question">Was qualifiziert euch?</p>
       <span class="faq-icon">+</span>
     </div>
-    <div class="faq-answer">Mehr als 10 Jahre Finanzwissen, IHK-Zertifizierung & über 1.000 begleitete Lohnkräfte sprechen für sich.</div>
+    <div class="faq-answer">Mehr als 10 Jahre Finanzwissen, IHK-Zertifizierung & über 1.000 begleitete Lehrkräfte sprechen für sich.</div>
   </div>
 
 </section>
